# ms-jarvis-svc

./: .env.example  .gitignore  Dockerfile  README.md  README_create_module.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20241126025623_init.py  20241127012047_add_master_data.py  20241127024036_add_table_seeder.py  20241127040939_add_category_id_for_bot.py  20250101131911_team_bots.py  20250106144710_table_bot.py  20250106150800_table_bot.py  [timestamp]_add_bot_access_level.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: bot.py  character.py  chat.py  deps.py  example.py  file.py  (+1 more)
app/core/: config.py  exceptions.py  logging.py  repository.py
app/database/: seeder_registry.py
app/database/seeders/: base_seeder.py
app/db/: session.py
app/middleware/: audit.py  context.py  request_id.py
app/models/: __init__.py  base.py  bot.py  enums.py  master.py  seeder_version.py
app/repositories/: bot_repository.py  master_repository.py
app/schemas/: base.py  bot.py  chat.py  master.py  response.py
app/services/: bot.py  conversation_service.py  file.py  master.py
app/utils/: datetime_utils.py  debug.py  encryption.py  http_client.py  json_encoder.py  pagination.py  response_handler.py  transaction.py
chainable_llm/: __init__.py  requirements.txt  setup.py
chainable_llm/core/: exceptions.py  logging.py  streaming.py  types.py
chainable_llm/examples/: basic_chain.py  basic_example.py  basic_routing.py  smart_streaming.py  streaming.py  test.py
chainable_llm/llm/: anthropic.py  base.py  factory.py  openai.py  router.py
chainable_llm/nodes/: base.py  enhanced_base.py
chainable_llm/tests/: test_llm_routing.py  test_nodes.py
chainable_llm/transformers/: base.py  implementations.py
database_backups/: _ms-jarvis-db_20241127_011952.sql  _ms-jarvis-db_20241127_024048.sql
docker/: Dockerfile  docker-compose.yml
playground/: llm_bbs.py  main.py  test_chat.py  test_chat_stream.py
playground/module/: llm_service.py  memory.py
playground/pipelines/: chat.py  chat_stream.py
playground/prompts/: system_prompts.py  user_prompts.py
scripts/: create_migration.sh  create_module.py  delete_module.py  run_migrations.sh  seed.py  start.sh
(+1 files in other folders)
